Window controls width to prevent overlapping

--- a/friends.custom.css
+++ b/friends.custom.css
@@ -2855,7 +2855,7 @@ body[class*="shared_common_v6_"] {
 
 .friendsui-container .title-area-icon {
   height: 24px;
-  width: 26px;
+  width: 24px;
 }
 
 .friendsui-container .title-bar-actions {
